--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   },
   "devDependencies": {
     "@types/react": "17.0.13",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "autoprefixer": "^10.2.6",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4",
     "typescript": "4.3.5"
   }
 }
