--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,6 @@ services:
   web:
     build:
       context: .
-    # restart: always
-    volumes:
-      - ./:/app
-      - /app/node_modules
-      - /app/.next
+    restart: always
     ports:
       - 80:80
