--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   },
   "dependencies": {
     "next": "11.0.1",
-    "postcss": "^8.3.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "tailwindcss": "^2.2.4"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.13",
@@ -22,6 +20,8 @@
     "autoprefixer": "^10.2.6",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4",
     "typescript": "4.3.5"
   }
 }
