--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "typeface-rajdhani": "^1.1.13"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.13",
