--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "next": "11.0.1",
@@ -20,6 +21,7 @@
     "autoprefixer": "^10.2.6",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
+    "husky": "^7.0.0",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4",
     "typescript": "4.3.5"
