--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vegan-hacktivists-2",
+  "name": "vh-site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -22,6 +22,7 @@
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "husky": "^7.0.0",
+    "lint-staged": "^11.0.0",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4",
     "typescript": "4.3.5"
