--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "husky": "^7.0.0",
     "lint-staged": "^11.0.0",
     "postcss": "^8.3.5",
+    "prettier": "^2.3.2",
     "tailwindcss": "^2.2.4",
     "typescript": "4.3.5"
   }
