--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "husky install"
+    "postinstall": "is-ci || husky install"
   },
   "dependencies": {
     "next": "11.0.1",
@@ -22,6 +22,7 @@
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "husky": "^7.0.0",
+    "is-ci": "^3.0.0",
     "lint-staged": "^11.0.0",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
