--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "husky install"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "11.0.1",
