--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build container image
-        run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
+        run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):latest .
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
@@ -45,29 +45,44 @@ jobs:
         run: doctl registry login --expiry-seconds 600
 
       - name: Push image to DigitalOcean Container Registry
-        run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
+        run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):latest
 
   deploy:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     needs: build_and_push
 
-    steps:
-      - name: Deploy to Digital Ocean droplet via SSH action
-        uses: appleboy/ssh-action@v0.1.3
-        with:
-          HOST: ${{ secrets.HOST }}
-          USERNAME: ${{ secrets.USERNAME }}
-          KEY: ${{ secrets.SSH_SECRET_KEY }}
-          envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,COMMAND
-          script: |
-            # Stop running container
-            docker stop $(echo $IMAGE_NAME)
-            # Remove old container
-            docker rm $(echo $IMAGE_NAME)
-            # Run a new container from a new image
-            docker run -d \
-            --restart always \
-            -p 80:80 \
-            --name $(echo $IMAGE_NAME) \
-            $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
+    - name: Deploy to Docker Host
+      uses: wshihadeh/docker-deployment-action@v1
+      with:
+        remote_docker_host: ${{ secrets.DIGITALOCEAN_REGISTRY_HOST}}
+        ssh_private_key: ${{ secrets.SSH_SECRET_KEY }}
+        ssh_public_key: ${{ secrets.DOCKER_SSH_PUBLIC_KEY }}
+        deployment_mode: docker-compose
+        copy_stack_file: true
+        deploy_path: /home/deploy
+        stack_file_name: docker-compose.yaml
+        keep_files: 5
+        args: up -d
+        docker_prune: 'false'
+        pull_images_first: 'false'
+
+  #   steps:
+  #     - name: Deploy to Digital Ocean droplet via SSH action
+  #       uses: appleboy/ssh-action@v0.1.3
+  #       with:
+  #         HOST: ${{ secrets.HOST }}
+  #         USERNAME: ${{ secrets.USERNAME }}
+  #         KEY: ${{ secrets.SSH_SECRET_KEY }}
+  #         envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,COMMAND
+  #         script: |
+  #           # Stop running container
+  #           docker stop $(echo $IMAGE_NAME)
+  #           # Remove old container
+  #           docker rm $(echo $IMAGE_NAME)
+  #           # Run a new container from a new image
+  #           docker run -d \
+  #           --restart always \
+  #           -p 80:80 \
+  #           --name $(echo $IMAGE_NAME) \
+  #           $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
