--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,8 @@ on:
         description: 'Test scenario tags'
 
 env:
-  REGISTRY: ${{ secrets.DIGITALOCEAN_REGISTRY_HOST}}
+  # REGISTRY: ${{ secrets.DIGITALOCEAN_REGISTRY_HOST}}
+  REGISTRY: ${{ secrets.PRIVATE_REGISTRY }}
   IMAGE_NAME: ${{ github.event.repository.name }}
   HUSKY_SKIP_INSTALL: 1
 
@@ -34,14 +35,21 @@ jobs:
       - name: Build container image
         run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):latest .
 
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
+      # - name: Install doctl
+      #   uses: digitalocean/action-doctl@v2
+      #   with:
+      #     token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+      # - name: Log in to DigitalOcean Container Registry with short-lived credentials
+      #   run: doctl registry login --expiry-seconds 600
+      #
+      #
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-      - name: Log in to DigitalOcean Container Registry with short-lived credentials
-        run: doctl registry login --expiry-seconds 600
+          username: ${{ secrets.REGISTRY_USER }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
 
-      - name: Push image to DigitalOcean Container Registry
+      - name: Push image to Container Registry
         run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):latest
 
   deploy:
