--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
+          registry: db-admin.veganhacktivists.org
           username: ${{ secrets.REGISTRY_USER }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
