Github action Last try today

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
 
-  frontend:
+  vh-site:
     image: registry.digitalocean.com/veganhacktivists/vh-site
     restart: always
     labels:
