--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,22 +74,18 @@ jobs:
           docker_prune: 'false'
           pull_images_first: 'false'
 
-  #   steps:
-  #     - name: Deploy to Digital Ocean droplet via SSH action
-  #       uses: appleboy/ssh-action@v0.1.3
-  #       with:
-  #         HOST: ${{ secrets.HOST }}
-  #         USERNAME: ${{ secrets.USERNAME }}
-  #         KEY: ${{ secrets.SSH_SECRET_KEY }}
-  #         envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,COMMAND
-  #         script: |
-  #           # Stop running container
-  #           docker stop $(echo $IMAGE_NAME)
-  #           # Remove old container
-  #           docker rm $(echo $IMAGE_NAME)
-  #           # Run a new container from a new image
-  #           docker run -d \
-  #           --restart always \
-  #           -p 80:80 \
-  #           --name $(echo $IMAGE_NAME) \
-  #           $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
+    steps:
+      - name: Deploy to Digital Ocean droplet via SSH action
+        uses: appleboy/ssh-action@v0.1.3
+        with:
+          HOST: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          KEY: ${{ secrets.SSH_SECRET_KEY }}
+          envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,COMMAND
+          script: |
+            # Stop running container
+            docker-compose stop $(echo $IMAGE_NAME)
+            # Remove old container
+            docker rm $(echo $IMAGE_NAME)
+            # Run a new container from a new image
+            docker-compose -f docker-compose.yaml up -d
