--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,5 @@
 on:
-  # Trigger the workflow on push or pull request,
-  # but only for the main branch
+
   push:
     branches:
       - main
@@ -17,7 +16,6 @@ on:
         description: 'Test scenario tags'
 
 env:
-  # REGISTRY: ${{ secrets.DIGITALOCEAN_REGISTRY_HOST}}
   REGISTRY: ${{ secrets.PRIVATE_REGISTRY }}
   IMAGE_NAME: ${{ github.event.repository.name }}
   HUSKY_SKIP_INSTALL: 1
@@ -35,14 +33,6 @@ jobs:
       - name: Build container image
         run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):latest .
 
-      # - name: Install doctl
-      #   uses: digitalocean/action-doctl@v2
-      #   with:
-      #     token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-      # - name: Log in to DigitalOcean Container Registry with short-lived credentials
-      #   run: doctl registry login --expiry-seconds 600
-      #
-      #
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -59,32 +49,30 @@ jobs:
     needs: build_and_push
 
     steps:
-      # - name: Deploy to Docker Host
-      #   uses: wshihadeh/docker-deployment-action@v1
-      #   with:
-      #     remote_docker_host: ${{ secrets.DIGITALOCEAN_REGISTRY_HOST}}
-      #     ssh_private_key: ${{ secrets.SSH_SECRET_KEY }}
-      #     ssh_public_key: ${{ secrets.DOCKER_SSH_PUBLIC_KEY }}
-      #     deployment_mode: docker-compose
-      #     copy_stack_file: true
-      #     deploy_path: /home/deploy
-      #     stack_file_name: docker-compose.yaml
-      #     keep_files: 5
-      #     args: up -d
-      #     docker_prune: 'false'
-      #     pull_images_first: 'false'
-
-      - name: Deploy to Digital Ocean droplet via SSH action
-        uses: appleboy/ssh-action@v0.1.3
+       - name: Deploy to Digital Ocean droplet via SSH action
+        uses: $(echo $IMAGE_NAME)leboy/ssh-action@v0.1.3
         with:
           HOST: ${{ secrets.HOST }}
           USERNAME: ${{ secrets.USERNAME }}
           KEY: ${{ secrets.SSH_SECRET_KEY }}
           envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,COMMAND
           script: |
-            # Stop running container
-            docker-compose stop $(echo $IMAGE_NAME)
-            # Remove old container
+            docker stop $(echo $IMAGE_NAME)
             docker rm $(echo $IMAGE_NAME)
-            # Run a new container from a new image
-            docker-compose -f docker-compose.yaml up -d
+            docker run -d \
+            --restart always \
+            --label traefik.enable=true \
+            --label traefik.http.services.$(echo $IMAGE_NAME).loadbalancer.server.port=80 \
+            --label traefik.http.routers.$(echo $IMAGE_NAME)-http.entrypoints=http \
+            --label traefik.http.routers.$(echo $IMAGE_NAME)-http.rule=Host(`new.veganhacktivists.org`) \
+            --label traefik.docker.network=traefik-public \
+            --label traefik.http.routers.$(echo $IMAGE_NAME)-https.entrypoints=https \
+            --label traefik.http.routers.$(echo $IMAGE_NAME)-https.rule=Host(`new.veganhacktivists.org`) \
+            --label traefik.http.routers.$(echo $IMAGE_NAME)-https.tls=true \
+            --label traefik.http.routers.$(echo $IMAGE_NAME)-https.tls.certresolver=le \
+            --label traefik.http.middlewares.https-redirect.redirectscheme.scheme=https \
+            --label traefik.http.middlewares.https-redirect.redirectscheme.permanent=true \
+            --label traefik.http.routers.$(echo $IMAGE_NAME)-http.middlewares=https-redirect \
+            --network=traefik-public
+            --name $(echo $IMAGE_NAME) \
+            $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
