--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
 
     steps:
        - name: Deploy to Digital Ocean droplet via SSH action
-         uses: $(echo $IMAGE_NAME)leboy/ssh-action@v0.1.3
+         uses: appleboy/ssh-action@v0.1.3
          with:
            HOST: ${{ secrets.HOST }}
            USERNAME: ${{ secrets.USERNAME }}
