--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,17 +62,17 @@ jobs:
              docker run -d \
              --restart always \
              --label traefik.enable=true \
-             --label traefik.http.services.$(echo $IMAGE_NAME).loadbalancer.server.port=80 \
-             --label traefik.http.routers.$(echo $IMAGE_NAME)-http.entrypoints=http \
-             --label traefik.http.routers.$(echo $IMAGE_NAME)-http.rule=Host(`new.veganhacktivists.org`) \
+             --label traefik.http.services.app.loadbalancer.server.port=80 \
+             --label traefik.http.routers.app-http.entrypoints=http \
+             --label traefik.http.routers.app-http.rule=Host(`new.veganhacktivists.org`) \
              --label traefik.docker.network=traefik-public \
-             --label traefik.http.routers.$(echo $IMAGE_NAME)-https.entrypoints=https \
-             --label traefik.http.routers.$(echo $IMAGE_NAME)-https.rule=Host(`new.veganhacktivists.org`) \
-             --label traefik.http.routers.$(echo $IMAGE_NAME)-https.tls=true \
-             --label traefik.http.routers.$(echo $IMAGE_NAME)-https.tls.certresolver=le \
+             --label traefik.http.routers.app-https.entrypoints=https \
+             --label traefik.http.routers.app-https.rule=Host(`new.veganhacktivists.org`) \
+             --label traefik.http.routers.app-https.tls=true \
+             --label traefik.http.routers.app-https.tls.certresolver=le \
              --label traefik.http.middlewares.https-redirect.redirectscheme.scheme=https \
              --label traefik.http.middlewares.https-redirect.redirectscheme.permanent=true \
-             --label traefik.http.routers.$(echo $IMAGE_NAME)-http.middlewares=https-redirect \
+             --label traefik.http.routers.app-http.middlewares=https-redirect \
              --network=traefik-public
              --name $(echo $IMAGE_NAME) \
              $(echo $REGISTRY)/$(echo $IMAGE_NAME):latest
