--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
              --label traefik.enable=true \
              --label traefik.http.services.app.loadbalancer.server.port=80 \
              --label traefik.http.routers.app-http.entrypoints=http \
-             --label traefik.http.routers.app-http.rule=Host("new.veganhacktivists.org") \
+             --label traefik.http.routers.app-http.rule=Host\(\`new.veganhacktivists.org\`\) \
              --label traefik.docker.network=traefik-public \
              --label traefik.http.routers.app-https.entrypoints=https \
              --label "traefik.http.routers.app-https.rule=Host(`new.veganhacktivists.org`)" \
