--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,8 @@ indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
 
+[*.{js,jsx,ts,tsx}]
+quote_type = single
+
 [*.md]
 trim_trailing_whitespace = false
