--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.2.2",
     "@testing-library/dom": "^8.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
