--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "husky install",
+    "prepare": "husky install",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
