--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "classnames": "^2.3.1",
+    "contentful": "^8.4.2",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
