Add Contentful readonly API key to envfile

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 ***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
+***REMOVED***a0em3uo7cuue
+***REMOVED***fN50CTvT108lOAhuMN2ZEbWvSXy__2H4YSjOO7OOems
+***REMOVED***NQLjlDUOGJ79BWAKF3y1hNycFfngprBanDUQdKGHeoE
