--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -17,7 +17,7 @@ on:
 
 env:
   REGISTRY: ${{ secrets.PRIVATE_REGISTRY }}
-  IMAGE_NAME: ${{ github.event.repository.name }} + "dev"
+  IMAGE_NAME: vh-site-dev
   HUSKY_SKIP_INSTALL: 1
 
 jobs:
