--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ on:
 
 env:
   REGISTRY: ${{ secrets.PRIVATE_REGISTRY }}
-  IMAGE_NAME: ${{ github.event.repository.name }}
+  IMAGE_NAME: 'vh-site-stg'
   HUSKY_SKIP_INSTALL: 1
 
 jobs:
