--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build container image
-        run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
+        run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) -f Dockerfile.dev
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -72,6 +72,6 @@ jobs:
              --label traefik.http.routers.app-https.tls.certresolver=le \
              --label traefik.http.routers.app-https.tls=true \
              --label traefik.http.routers.app-https.entrypoints=https \
-             --label traefik.http.services.app.loadbalancer.server.port=80 \
+             --label traefik.http.services.app.loadbalancer.server.port=8081 \
              --network=traefik-public \
              --name $(echo $IMAGE_NAME) $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
