--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -1,5 +1,4 @@
 on:
-
   push:
     branches:
       - dev
@@ -9,19 +8,21 @@ on:
   workflow_dispatch:
     inputs:
       logLevel:
-        description: 'Log level'
+        description: "Log level"
         required: true
-        default: 'warning'
+        default: "warning"
       tags:
-        description: 'Test scenario tags'
+        description: "Test scenario tags"
 
 env:
   REGISTRY: ${{ secrets.PRIVATE_REGISTRY }}
-  IMAGE_NAME: 'vh-site-dev'
-  HUSKY_SKIP_INSTALL: 1
+  IMAGE_NAME: "vh-site-dev"
+  CF_SPACE_ID: ${{ secrets.CF_SPACE_ID }}
+  CF_DELIVERY_ACCESS_TOKEN: ${{ secrets.CF_DELIVERY_ACCESS_TOKEN }}
+  CF_PREVIEW_ACCESS_TOKEN: ${{ secrets.CF_PREVIEW_ACCESS_TOKEN }}
+  CF_ENVIRONMENT: master
 
 jobs:
-
   build_and_push:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
@@ -31,6 +32,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build container image
+        with:
+          envs: CF_SPACE_ID,CF_DELIVERY_ACCESS_TOKEN,CF_PREVIEW_ACCESS_TOKEN,CF_ENVIRONMENT
         run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) -f Dockerfile.dev
 
       - name: Login to Docker Hub
@@ -49,29 +52,33 @@ jobs:
     needs: build_and_push
 
     steps:
-       - name: Deploy to Digital Ocean droplet via SSH action
-         uses: appleboy/ssh-action@v0.1.3
-         with:
-           HOST: ${{ secrets.HOST }}
-           USERNAME: ${{ secrets.USERNAME }}
-           KEY: ${{ secrets.SSH_SECRET_KEY }}
-           envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,COMMAND
-           script: |
-             docker stop $(echo $IMAGE_NAME)
-             docker rm $(echo $IMAGE_NAME)
-             docker run -d \
-             --restart always \
-             --label traefik.enable=true \
-             --label traefik.docker.network=traefik-public \
-             --label traefik.http.middlewares.https-redirect.redirectscheme.scheme=https \
-             --label traefik.http.middlewares.https-redirect.redirectscheme.permanent=true \
-             --label traefik.http.routers.app-http.middlewares=https-redirect \
-             --label traefik.http.routers.app-http.rule=Host\(\`dev.veganhacktivists.org\`\) \
-             --label traefik.http.routers.app-http.entrypoints=http \
-             --label traefik.http.routers.app-https.rule=Host\(\`dev.veganhacktivists.org\`\) \
-             --label traefik.http.routers.app-https.tls.certresolver=le \
-             --label traefik.http.routers.app-https.tls=true \
-             --label traefik.http.routers.app-https.entrypoints=https \
-             --label traefik.http.services.app.loadbalancer.server.port=8081 \
-             --network=traefik-public \
-             --name $(echo $IMAGE_NAME) $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
+      - name: Deploy to Digital Ocean droplet via SSH action
+        uses: appleboy/ssh-action@v0.1.3
+        with:
+          HOST: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          KEY: ${{ secrets.SSH_SECRET_KEY }}
+          envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,COMMAND,CF_SPACE_ID,CF_DELIVERY_ACCESS_TOKEN,CF_PREVIEW_ACCESS_TOKEN,CF_ENVIRONMENT
+          script: |
+            docker stop $(echo $IMAGE_NAME)
+            docker rm $(echo $IMAGE_NAME)
+            docker run -d \
+            --restart always \
+            --env ***REMOVED***$CF_SPACE_ID \
+            --env ***REMOVED***$CF_DELIVERY_ACCESS_TOKEN \
+            --env ***REMOVED***$CF_PREVIEW_ACCESS_TOKEN \
+            --env CF_ENVIRONMENT=$CF_ENVIRONMENT \
+            --label traefik.enable=true \
+            --label traefik.docker.network=traefik-public \
+            --label traefik.http.middlewares.https-redirect.redirectscheme.scheme=https \
+            --label traefik.http.middlewares.https-redirect.redirectscheme.permanent=true \
+            --label traefik.http.routers.app-http.middlewares=https-redirect \
+            --label traefik.http.routers.app-http.rule=Host\(\`dev.veganhacktivists.org\`\) \
+            --label traefik.http.routers.app-http.entrypoints=http \
+            --label traefik.http.routers.app-https.rule=Host\(\`dev.veganhacktivists.org\`\) \
+            --label traefik.http.routers.app-https.tls.certresolver=le \
+            --label traefik.http.routers.app-https.tls=true \
+            --label traefik.http.routers.app-https.entrypoints=https \
+            --label traefik.http.services.app.loadbalancer.server.port=8081 \
+            --network=traefik-public \
+            --name $(echo $IMAGE_NAME) $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
