--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@react-spring/web": "^9.2.4",
     "classnames": "^2.3.1",
     "contentful": "^8.4.2",
     "next": "11.0.1",
