Fix incorrect file naming
We should always use pascalCase

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
+# contentful vars
+CF_SPACE_ID=
+CF_DELIVERY_ACCESS_TOKEN=
+CF_PREVIEW_ACCESS_TOKEN=
+CF_MANAGING_ACCESS_TOKEN=
 
-***REMOVED***
+CF_ENVIRONMENT=master
 
-***REMOVED***
+NEXT_TELEMETRY_DISABLED=1
