--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "contentful": "^8.4.2",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sharp": "^0.28.3"
   },
   "devDependencies": {
     "@axe-core/react": "^4.2.2",
