--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
+version: "3"
 services:
-
   vh-site:
     image: registry.digitalocean.com/veganhacktivists/vh-site
     restart: always
@@ -33,4 +33,3 @@ services:
 networks:
   traefik-public:
     external: true
-
