--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sharp": "^0.28.3"
+    "sharp": "^0.28.3",
+    "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
     "@axe-core/react": "^4.2.2",
@@ -45,7 +46,6 @@
     "lint-staged": "^11.1.2",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
-    "tailwindcss": "^2.2.4",
     "typescript": "4.3.5"
   },
   "jest": {
