--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "autoprefixer": "^10.2.6",
     "babel-jest": "^27.0.6",
     "contentful-management": "^7.30.0",
-    "contentful-typescript-codegen": "^3.2.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "husky": "^7.0.0",
@@ -65,5 +64,8 @@
       "\\.(jpg|jpeg|png|gif)$": "<rootDir>/src/__mocks__/imageMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     }
+  },
+  "optionalDependencies": {
+    "contentful-typescript-codegen": "^3.2.2"
   }
 }
