Add secrets to docker compose

--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -4,6 +4,11 @@ services:
   web:
     build:
       context: .
+      args:
+        - CF_SPACE_ID=$CF_SPACE_ID
+        - CF_DELIVERY_ACCESS_TOKEN=$CF_DELIVERY_ACCESS_TOKEN
+        - CF_PREVIEW_ACCESS_TOKEN=$CF_PREVIEW_ACCESS_TOKEN
+        - CF_ENVIRONMENT=$CF_ENVIRONMENT
     restart: always
     ports:
       - 80:80
