--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@react-spring/web": "^9.2.4",
     "classnames": "^2.3.1",
     "contentful": "^8.4.2",
+    "formik": "^2.2.9",
     "next": "11.1.0",
+    "nodemailer": "^6.6.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sharp": "^0.28.3"
