--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@testing-library/dom": "^8.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.17",
     "@types/tailwindcss": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
