--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sharp": "^0.28.3"
+    "sharp": "^0.28.3",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@axe-core/react": "^4.2.2",
@@ -31,6 +32,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/react": "17.0.17",
+    "@types/styled-components": "^5.1.12",
     "@types/tailwindcss": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
