--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "react-hooks/exhaustive-deps": "off",
     "react/jsx-fragments": ["warn"],
     "react/jsx-pascal-case": ["error"],
+    "react/display-name": ["off"],
 
     // typescript
     "@typescript-eslint/consistent-type-imports": [
