--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@react-spring/web": "^9.2.4",
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "contentful": "^8.5.0",
-    "formik": "^2.2.9",
     "next": "11.1.0",
     "nodemailer": "^6.6.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.13.0",
+    "react-select": "^4.3.1",
     "sharp": "^0.29.0"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@testing-library/react": "^12.0.0",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.19",
+    "@types/react-select": "^4.0.17",
     "@types/tailwindcss": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
