--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "contentful": "^8.5.0",
+    "http-status-codes": "^2.1.4",
     "next": "11.1.0",
-    "nodemailer": "^6.6.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.13.0",
