--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.13.0",
     "react-select": "^4.3.1",
+    "react-use-pagination": "^2.0.1",
     "sharp": "^0.29.0"
   },
   "devDependencies": {
