--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "contentful": "^8.5.0",
+    "fuse.js": "^6.4.6",
     "http-status-codes": "^2.1.4",
     "next": "11.1.0",
     "react": "17.0.2",
