--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@react-spring/web": "^9.2.4",
+    "@tailwindcss/line-clamp": "^0.2.1",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "contentful": "^8.5.0",
