--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fuse.js": "^6.4.6",
     "http-status-codes": "^2.1.4",
     "next": "11.1.0",
+    "patreon": "^0.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.13.0",
