--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,9 +79,9 @@ jobs:
             --label traefik.http.middlewares.https-redirect.redirectscheme.scheme=https \
             --label traefik.http.middlewares.https-redirect.redirectscheme.permanent=true \
             --label traefik.http.routers.app-http.middlewares=https-redirect \
-            --label traefik.http.routers.app-http.rule=Host\(\`new.veganhacktivists.org\`\) \
+            --label traefik.http.routers.app-http.rule=Host\(\`veganhacktivists.org\`\) \
             --label traefik.http.routers.app-http.entrypoints=http \
-            --label traefik.http.routers.app-https.rule=Host\(\`new.veganhacktivists.org\`\) \
+            --label traefik.http.routers.app-https.rule=Host\(\`veganhacktivists.org\`\) \
             --label traefik.http.routers.app-https.tls.certresolver=le \
             --label traefik.http.routers.app-https.tls=true \
             --label traefik.http.routers.app-https.entrypoints=https \
