Use AWS registry

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,8 @@ on:
         description: "Test scenario tags"
 
 env:
-  REGISTRY: ${{ secrets.PRIVATE_REGISTRY }}
+  AWS_REGISTRY: ${{ secrets.AWS_PRIVATE_REGISTRY }}
+  AWS_REPOSITORY: "vh-site-registry-repository"
   IMAGE_NAME: ${{ github.event.repository.name }}-stg
   CF_SPACE_ID: ${{ secrets.CF_SPACE_ID }}
   CF_DELIVERY_ACCESS_TOKEN: ${{ secrets.CF_DELIVERY_ACCESS_TOKEN }}
@@ -29,24 +30,24 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
-
     steps:
       - name: Checkout main
         uses: actions/checkout@v2
-
-      - name: Build container image
-        run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) --build-arg CF_SPACE_ID=$CF_SPACE_ID --build-arg CF_DELIVERY_ACCESS_TOKEN=$CF_DELIVERY_ACCESS_TOKEN --build-arg CF_PREVIEW_ACCESS_TOKEN=$CF_PREVIEW_ACCESS_TOKEN --build-arg CF_ENVIRONMENT=$CF_ENVIRONMENT --build-arg PATREON_ACCESS_TOKEN=$PATREON_ACCESS_TOKEN --build-arg PATREON_CAMPAIGN_ID=$PATREON_CAMPAIGN_ID .
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          registry: db-admin.veganhacktivists.org
-          username: ${{ secrets.REGISTRY_USER }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_REGISTRY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_REGISTRY }}
+          aws-region: us-east-2
 
-      - name: Push image to Container Registry
-        run: docker push ${REGISTRY}/${IMAGE_NAME}:$(echo $GITHUB_SHA | head -c7)
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
+      - name: Build, tag, and push image to Amazon ECR
+        run: |
+          docker build --file ./Dockerfile -t $AWS_REGISTRY/$AWS_REPOSITORY:$IMAGE_NAME --build-arg CF_SPACE_ID=$CF_SPACE_ID --build-arg CF_DELIVERY_ACCESS_TOKEN=$CF_DELIVERY_ACCESS_TOKEN --build-arg CF_PREVIEW_ACCESS_TOKEN=$CF_PREVIEW_ACCESS_TOKEN --build-arg CF_ENVIRONMENT=$CF_ENVIRONMENT --build-arg PORT=8081 .
+          docker push $AWS_REGISTRY/$AWS_REPOSITORY:$IMAGE_NAME
   deploy:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
@@ -59,10 +60,11 @@ jobs:
           HOST: ${{ secrets.HOST }}
           USERNAME: ${{ secrets.USERNAME }}
           KEY: ${{ secrets.SSH_SECRET_KEY }}
-          envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,COMMAND,CF_SPACE_ID,CF_DELIVERY_ACCESS_TOKEN,CF_PREVIEW_ACCESS_TOKEN,CF_ENVIRONMENT,MAILGUN_API_KEY,PATREON_ACCESS_TOKEN,PATREON_CAMPAIGN_ID
+          envs: IMAGE_NAME,AWS_REGISTRY,AWS_REPOSITORY,GITHUB_SHA,COMMAND,CF_SPACE_ID,CF_DELIVERY_ACCESS_TOKEN,CF_PREVIEW_ACCESS_TOKEN,CF_ENVIRONMENT,MAILGUN_API_KEY,PATREON_ACCESS_TOKEN,PATREON_CAMPAIGN_ID
           script: |
             bash /home/deploy/clean.sh
-            docker pull ${REGISTRY}/${IMAGE_NAME}:$(echo $GITHUB_SHA | head -c7)
+            aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin $AWS_REGISTRY
+            docker pull $(echo $AWS_REGISTRY)/$(echo $AWS_REPOSITORY):$(echo $IMAGE_NAME)
             docker stop $IMAGE_NAME
             docker rm $IMAGE_NAME
             docker run -d \
@@ -79,12 +81,12 @@ jobs:
             --label traefik.http.middlewares.https-redirect.redirectscheme.scheme=https \
             --label traefik.http.middlewares.https-redirect.redirectscheme.permanent=true \
             --label traefik.http.routers.app-http.middlewares=https-redirect \
-            --label traefik.http.routers.app-http.rule=Host\(\`veganhacktivists.org\`\) \
+            --label traefik.http.routers.app-http.rule=Host\(\`new.veganhacktivists.org\`\) \
             --label traefik.http.routers.app-http.entrypoints=http \
-            --label traefik.http.routers.app-https.rule=Host\(\`veganhacktivists.org\`\) \
+            --label traefik.http.routers.app-https.rule=Host\(\`new.veganhacktivists.org\`\) \
             --label traefik.http.routers.app-https.tls.certresolver=le \
             --label traefik.http.routers.app-https.tls=true \
             --label traefik.http.routers.app-https.entrypoints=https \
             --label traefik.http.services.app.loadbalancer.server.port=80 \
             --network=traefik-public \
-            --name $IMAGE_NAME ${REGISTRY}/${IMAGE_NAME}:$(echo $GITHUB_SHA | head -c7)
+            --name $(echo $IMAGE_NAME) $(echo $AWS_REGISTRY)/$(echo $AWS_REPOSITORY):$(echo $IMAGE_NAME)
