Adding the production image to the new registry fixing docker pull

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,7 @@ jobs:
           envs: IMAGE_NAME,AWS_REGISTRY,AWS_REPOSITORY,GITHUB_SHA,COMMAND,CF_SPACE_ID,CF_DELIVERY_ACCESS_TOKEN,CF_PREVIEW_ACCESS_TOKEN,CF_ENVIRONMENT,MAILGUN_API_KEY,PATREON_ACCESS_TOKEN,PATREON_CAMPAIGN_ID,GOOGLE_TAG_MANAGER_CONTAINER_ID
           script: |
             aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin $AWS_REGISTRY
-            docker pull ${REGISTRY}/${IMAGE_NAME}:$(echo $GITHUB_SHA | head -c7)
+            docker pull ${AWS_REGISTRY}/$AWS_REPOSITORY:$(echo $IMAGE_NAME)
             docker stop $IMAGE_NAME
             docker rm $IMAGE_NAME
             docker run -d \
