Add mailchimp client

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,9 @@ CF_ENVIRONMENT=master
 
 MAILGUN_API_KEY=
 
+MAILCHIMP_API_KEY=
+MAILCHIMP_AUDIENCE_ID=
+MAILCHIMP_SERVER_ID=us20
+MAILCHIMP_LIST_ID=
+
 NEXT_TELEMETRY_DISABLED=1
