--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@mailchimp/mailchimp_marketing": "^3.0.66",
     "@react-spring/web": "^9.2.4",
     "@tailwindcss/line-clamp": "^0.2.1",
     "axios": "^0.21.4",
@@ -42,6 +43,7 @@
     "@testing-library/dom": "^8.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.2",
     "@types/react": "17.0.24",
     "@types/react-gtm-module": "^2.0.1",
     "@types/tailwindcss": "^2.2.1",
