--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ env:
   PATREON_ACCESS_TOKEN: ${{ secrets.PATREON_ACCESS_TOKEN }}
   PATREON_CAMPAIGN_ID: ${{ secrets.PATREON_CAMPAIGN_ID }}
   GOOGLE_TAG_MANAGER_CONTAINER_ID: ${{ secrets.GOOGLE_TAG_MANAGER_CONTAINER_ID }}
+  MAILCHIMP_AUDIENCE_ID: ${{ secrets.MAILCHIMP_AUDIENCE_ID }}
 
 jobs:
   build_and_push:
@@ -40,7 +41,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_REGISTRY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_REGISTRY }}
           aws-region: us-east-2
-      
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
@@ -53,7 +54,6 @@ jobs:
     if: github.event_name == 'push'
     needs: build_and_push
     steps:
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -83,6 +83,7 @@ jobs:
             --env PATREON_ACCESS_TOKEN=$PATREON_ACCESS_TOKEN \
             --env PATREON_CAMPAIGN_ID=$PATREON_CAMPAIGN_ID \
             --env NEXT_PUBLIC_GOOGLE_TAG_MANAGER_CONTAINER_ID=$GOOGLE_TAG_MANAGER_CONTAINER_ID \
+            --env MAILCHIMP_AUDIENCE_ID=$MAILCHIMP_AUDIENCE_ID \
             --label traefik.enable=true \
             --label traefik.docker.network=traefik-public \
             --label traefik.http.middlewares.https-redirect.redirectscheme.scheme=https \
