Register web worker

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
   "display": "minimal-ui",
   "theme_color": "#000000",
   "background_color": "#000000",
-  "prefer_related_applications": "false",
+  "prefer_related_applications": false,
   "icons": [
     {
       "src": "icons/icon-72x72.png",
