--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ky": "^0.28.6",
     "mailgun.js": "^3.7.0",
     "next": "12.0.1",
+    "next-pwa": "^5.4.0",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
