--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,7 @@ MAILCHIMP_API_KEY=
 MAILCHIMP_AUDIENCE_ID=
 MAILCHIMP_SERVER_ID=us20
 
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
 NEXT_TELEMETRY_DISABLED=1
