Remove footer from docs
This implied changing how the default layout is created. We now
support overriding the default layout as needed in the `getDefaultLayout` function

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,10 @@
     "react/self-closing-comp": ["warn"],
     "react/function-component-definition": [
       "warn",
-      { "namedComponents": "arrow-function" }
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }
     ],
     "react-hooks/exhaustive-deps": "off",
     "react/jsx-fragments": ["warn"],
