Add NEXTAUTH_SECRET to .env.example
This is just for development, it can be any random value and it's just
to supress a warning that only applies to production

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,4 @@ EMAIL_FROM=
 DATABASE_URL="postgresql://vegan_hacktivists:localpass@localhost:5432/vegan_hacktivists?schema=public"
 
 NEXT_TELEMETRY_DISABLED=1
+NEXTAUTH_SECRET=govegan
